add vis notebook, get predictions from diff models and save masks

--- a/notebooks/visualize.ipynb
+++ b/notebooks/visualize.ipynb
@@ -2,19 +2,207 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"hello\")"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os,sys,inspect\n",
+    "sys.path.insert(0,\"..\")\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rc\n",
+    "import glob\n",
+    "\n",
+    "macos = False\n",
+    "if macos == True:\n",
+    "    rc('font',**{'family':'sans-serif','sans-serif':['Computer Modern Roman']})\n",
+    "    rc('text', usetex=True)\n",
+    "\n",
+    "# Font Size\n",
+    "import matplotlib\n",
+    "font = {'family' : 'DejaVu Sans',\n",
+    "        'weight' : 'bold',\n",
+    "        'size'   : 30}\n",
+    "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import string\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize(idx, **images):\n",
+    "    \"\"\"Plot images in one row.\"\"\" \n",
+    "    n = len(images)\n",
+    "    fig = plt.figure(figsize=(60, 40))\n",
+    "    for i, (name, image) in enumerate(images.items()):\n",
+    "        plt.subplot(1, n, i + 1)\n",
+    "        plt.xticks([])\n",
+    "        plt.yticks([])\n",
+    "        #if idx==0:\n",
+    "        plt.title(' '.join(name.split('_')).lower(), fontsize=40)\n",
+    "        if i ==0:\n",
+    "            w,h = (1,25)\n",
+    "            fs = 1.0\n",
+    "            color = (0,0,0)\n",
+    "            #color = (255,255,255)\n",
+    "            font = cv2.FONT_HERSHEY_SIMPLEX #FONT_HERSHEY_DUPLEX  #press tab for different operations\n",
+    "            cv2.putText(image, str(idx), (w,h), font, fs, color, 1, cv2.LINE_AA)\n",
+    "        if i !=0:\n",
+    "            #plt.imshow(image[:,:,0], cmap='magma')\n",
+    "            plt.imshow(image, cmap='gray')\n",
+    "        else:\n",
+    "            plt.imshow(image, cmap='gray')\n",
+    "        plt.axis(\"off\")\n",
+    "        #plt.tight_layout()\n",
+    "    plt.savefig(\"../outputs/visualizations/duts-te/compare-preds/{}.png\".format(idx), facecolor=\"white\", bbox_inches = 'tight')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "def make_dataset(dir):\n",
+    "    images = []\n",
+    "    assert os.path.isdir(dir), '%s is not a valid directory' % dir\n",
+    "\n",
+    "    f = dir.split('/')[-1].split('_')[-1]\n",
+    "    #print (dir, f)\n",
+    "    dirs= os.listdir(dir)\n",
+    "    for img in dirs:\n",
+    "\n",
+    "        path = os.path.join(dir, img)\n",
+    "        #print(path)\n",
+    "        images.append(path)\n",
+    "    return images\n",
+    "\n",
+    "def read_image(path):\n",
+    "    image = cv2.imread(path, -1)\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    return image\n",
+    "\n",
+    "def read_image_(path):\n",
+    "    image = cv2.imread(path, -1)\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    image = cv2.resize(image, (192, 256))\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # ECSSD\n",
+    "\n",
+    "# # Images and GT\n",
+    "\n",
+    "# GT = \"../outputs/visualizations/ecssd/gts\"\n",
+    "# IMG = \"../datasets_local/ECSSD/images/\"\n",
+    "# GTS = [os.path.join(GT, x) for x in os.listdir(GT)]\n",
+    "# IMGS = [os.path.join(IMG, x) for x in os.listdir(IMG)]\n",
+    "\n",
+    "# # Algo\n",
+    "# algo1 = \"../outputs/visualizations/ecssd/found-MSL-DUTS-TR-vit_small8_ECSSD/\"\n",
+    "# ours = \"../outputs/visualizations/ecssd/msl_a1.5_b1_g1_reg4-MSL-DUTS-TR-vit_small8_ECSSD/\"\n",
+    "\n",
+    "# algo1 = [os.path.join(algo1, x) for x in os.listdir(algo1)]\n",
+    "# ours = [os.path.join(ours, x) for x in os.listdir(ours)]\n",
+    "\n",
+    "# print(len(GTS), len(IMGS))\n",
+    "# print(ours[:3])\n",
+    "\n",
+    "# i = 0\n",
+    "# for num in range(len(IMGS)):\n",
+    "#     visualize(i, \n",
+    "#               image=read_image(IMGS[num]),\n",
+    "#               found_method=read_image(algo1[num]),\n",
+    "#               our_method=read_image(ours[num]),\n",
+    "#               gt=read_image(GTS[num]))\n",
+    "#     i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # DUT_OMRON\n",
+    "\n",
+    "# # Images and GT\n",
+    "\n",
+    "# GT = \"../outputs/visualizations/dut-omron/gts\"\n",
+    "# IMG = \"../datasets_local/DUT-OMRON/DUT-OMRON-image/\"\n",
+    "# GTS = [os.path.join(GT, x) for x in os.listdir(GT)]\n",
+    "# IMGS = [os.path.join(IMG, x) for x in os.listdir(IMG)]\n",
+    "\n",
+    "# # Algo\n",
+    "# algo1 = \"../outputs/visualizations/dut-omron/found-MSL-DUTS-TR-vit_small8_DUT-OMRON/\"\n",
+    "# ours = \"../outputs/visualizations/dut-omron/msl_a1.5_b1_g1_reg4-MSL-DUTS-TR-vit_small8_DUT-OMRON/\"\n",
+    "\n",
+    "# algo1 = [os.path.join(algo1, x) for x in os.listdir(algo1)]\n",
+    "# ours = [os.path.join(ours, x) for x in os.listdir(ours)]\n",
+    "\n",
+    "# print(len(GTS), len(IMGS))\n",
+    "# print(ours[:3])\n",
+    "\n",
+    "# i = 0\n",
+    "# for num in range(len(IMGS)):\n",
+    "#     visualize(i, \n",
+    "#               image=read_image(IMGS[num]),\n",
+    "#               found_method=read_image(algo1[num]),\n",
+    "#               our_method=read_image(ours[num]),\n",
+    "#               gt=read_image(GTS[num]))\n",
+    "#     i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # DUT-TE\n",
+    "\n",
+    "# # Images and GT\n",
+    "\n",
+    "# GT = \"../outputs/visualizations/duts-te/gts\"\n",
+    "# IMG = \"../datasets_local/DUTS-TE/DUTS-TE-Image/\"\n",
+    "# GTS = [os.path.join(GT, x) for x in os.listdir(GT)]\n",
+    "# IMGS = [os.path.join(IMG, x) for x in os.listdir(IMG)]\n",
+    "\n",
+    "# # Algo\n",
+    "# algo1 = \"../outputs/visualizations/duts-te/found-MSL-DUTS-TR-vit_small8_DUTS-TE/\"\n",
+    "# ours = \"../outputs/visualizations/duts-te/msl_a1.5_b1_g1_reg4-MSL-DUTS-TR-vit_small8_DUTS-TE/\"\n",
+    "\n",
+    "# algo1 = [os.path.join(algo1, x) for x in os.listdir(algo1)]\n",
+    "# ours = [os.path.join(ours, x) for x in os.listdir(ours)]\n",
+    "\n",
+    "# print(len(GTS), len(IMGS))\n",
+    "# print(ours[:3])\n",
+    "\n",
+    "# i = 0\n",
+    "# for num in range(len(IMGS)):\n",
+    "#     visualize(i, \n",
+    "#               image=read_image(IMGS[num]),\n",
+    "#               found_method=read_image(algo1[num]),\n",
+    "#               our_method=read_image(ours[num]),\n",
+    "#               gt=read_image(GTS[num]))\n",
+    "#     i+=1"
    ]
   },
   {
