--- a/notebooks/graphs.ipynb
+++ b/notebooks/graphs.ipynb
@@ -61,7 +61,7 @@
     "rects2 = ax.bar(x + width/2, acc_nst, width, label='high masking', color='#7DB9B6') # #9ED2C6\n",
     "#rects211 = ax.bar(x + width/2 * 3.08, acc, width, label='CF1')\n",
     "\n",
-    "ax.set_ylabel('CorLoc (%)', fontsize=20)\n",
+    "#ax.set_ylabel('CorLoc (%)', fontsize=20)\n",
     "#ax.set_title('Results')\n",
     "ax.set_xticks(x)\n",
     "ax.set_xticklabels(labels, rotation=0, fontsize=20)\n",
@@ -106,10 +106,114 @@
     "\n",
     "fig.tight_layout()\n",
     "fig.set_size_inches(12, 4, forward=True)\n",
-    "plt.title('Single Object Discovery (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
+    "#plt.title('Single Object Discovery (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
     "#plt.title('VOC2007 (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
     "plt.legend(loc='upper right', fontsize=18)\n",
     "plt.savefig(\"../logs/masking_ablation.pdf\", bbox_inches='tight', pad_inches=0, dpi=300)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#labels = ['Baseline', 'MaskSup']\n",
+    "labels = ['VOC07', 'VOC12', 'COCO20K']\n",
+    "\n",
+    "# VOC\n",
+    "auc_b = [71.6, 75.2, 61.8] # base\n",
+    "auc = [72.2, 75.5, 62.3] # base\n",
+    "acc_nst = [72.7, 75.9, 64.0]\n",
+    "\n",
+    "# COCO\n",
+    "# auc = [54.2,36.0,48.4] # base\n",
+    "# acc_nst = [74.8,59.4,68.8]\n",
+    "\n",
+    "x = np.arange(len(labels))  # the label locations\n",
+    "dummy = np.arange(10)\n",
+    "\n",
+    "width = 0.25 #0.4  # the width of the bars\n",
+    "\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "rects1 = ax.bar(x - width/2, auc_b, width, label='Baseline', color='#E96479') # #FFAE6D\n",
+    "rects2 = ax.bar(x + width/2, auc, width, label='w/ MB', color='#7DB9B6') # #9ED2C6\n",
+    "rects211 = ax.bar(x + width/2 * 3.08, acc_nst, width, label='w/ MB + PA', color='#FFAE6D')\n",
+    "\n",
+    "ax.set_ylabel('CorLoc (%)', fontsize=20)\n",
+    "#ax.set_title('Results')\n",
+    "ax.set_xticks(x)\n",
+    "ax.set_xticklabels(labels, rotation=0, fontsize=20)\n",
+    "\n",
+    "#for i in range(18):\n",
+    "#    ax.get_xticklabels()[i].set_color(\"white\")\n",
+    "\n",
+    "#ax.set_ylim([30,80]) # coc\n",
+    "ax.set_ylim([60,80]) # voc\n",
+    "\n",
+    "#ax.legend(loc=\"upper left\", prop={'size': 14})\n",
+    "ax.grid(True)\n",
+    "#ax.patch.set_facecolor('white')\n",
+    "\n",
+    "def autolabel(rects):\n",
+    "    \"\"\"Attach a text label above each bar in *rects*, displaying its height.\"\"\"\n",
+    "    for rect in rects:\n",
+    "        height = rect.get_height()\n",
+    "        ax.annotate('{:.1f}'.format(height),\n",
+    "                    xy=(rect.get_x() + rect.get_width() / 2, height),\n",
+    "                    xytext=(0, 3),  # 3 points vertical offset\n",
+    "                    textcoords=\"offset points\",\n",
+    "                    ha='center', va='bottom', rotation=0, fontsize=15)\n",
+    "        #ax.set_ylim(ymin=1)\n",
+    "        \n",
+    "\n",
+    "def autolabel_(rects):\n",
+    "    \"\"\"Attach a text label above each bar in *rects*, displaying its height.\"\"\"\n",
+    "    for rect in rects:\n",
+    "        height = rect.get_height()\n",
+    "        ax.annotate('{:.1f}'.format(height),\n",
+    "                    xy=(rect.get_x() + rect.get_width() / 2, height),\n",
+    "                    xytext=(0, 3),  # 3 points vertical offset\n",
+    "                    textcoords=\"offset points\",\n",
+    "                    ha='center', va='bottom', rotation=0, fontsize=15)\n",
+    "        #ax.set_ylim(ymin=1)\n",
+    "\n",
+    "\n",
+    "autolabel(rects1) # %\n",
+    "autolabel(rects2)\n",
+    "autolabel_(rects211) # %\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "fig.set_size_inches(12, 4, forward=True)\n",
+    "plt.title('Single Object Discovery (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
+    "#plt.title('VOC2007 (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
+    "plt.legend(loc='upper right', fontsize=18)\n",
+    "plt.savefig(\"../logs/msl_ablation.pdf\", bbox_inches='tight', pad_inches=0, dpi=300)\n",
     "plt.show()"
    ]
   },
