--- a/notebooks/graphs.ipynb
+++ b/notebooks/graphs.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "fig.tight_layout()\n",
     "fig.set_size_inches(12, 4, forward=True)\n",
-    "#plt.title('Single Object Discovery (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
+    "plt.title('Impact of masking (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
     "#plt.title('VOC2007 (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
     "plt.legend(loc='upper right', fontsize=18)\n",
     "plt.savefig(\"../logs/masking_ablation.pdf\", bbox_inches='tight', pad_inches=0, dpi=300)\n",
@@ -162,8 +162,8 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "rects1 = ax.bar(x - width/2, auc_b, width, label='Baseline', color='#E96479') # #FFAE6D\n",
-    "rects2 = ax.bar(x + width/2, auc, width, label='w/ MB', color='#7DB9B6') # #9ED2C6\n",
-    "rects211 = ax.bar(x + width/2 * 3.08, acc_nst, width, label='w/ MB + PA', color='#FFAE6D')\n",
+    "rects2 = ax.bar(x + width/2, auc, width, label='w/ MFP', color='#7DB9B6') # #9ED2C6\n",
+    "rects211 = ax.bar(x + width/2 * 3.08, acc_nst, width, label='w/ MFP + PCL', color='#FFAE6D')\n",
     "\n",
     "ax.set_ylabel('CorLoc (%)', fontsize=20)\n",
     "#ax.set_title('Results')\n",
@@ -210,7 +210,7 @@
     "\n",
     "fig.tight_layout()\n",
     "fig.set_size_inches(12, 4, forward=True)\n",
-    "plt.title('Single Object Discovery (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
+    "plt.title('Effectiveness of MFP and PCL (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
     "#plt.title('VOC2007 (\\u2191)', loc='left', fontsize=25, color='gray', pad=12)\n",
     "plt.legend(loc='upper right', fontsize=18)\n",
     "plt.savefig(\"../logs/msl_ablation.pdf\", bbox_inches='tight', pad_inches=0, dpi=300)\n",
