create comparison of preds figure

--- a/notebooks/visualize.ipynb
+++ b/notebooks/visualize.ipynb
@@ -350,6 +350,27 @@
    "outputs": [],
    "source": [
     "\n",
+    "# ECSSD -\n",
+    "# \t52, 132, 147 - over segmentation, fine details\n",
+    "# \t353, 658, 780 - reflection of shiny surface and water\n",
+    "# 432, 825, 835, 988 - noisy \n",
+    "# 59 (bee) - complex background\n",
+    "\n",
+    "# DUT-OMRON\n",
+    "# \t1, 14 - over segmentation\n",
+    "# \t119, 365, 439, 440, 1238 - noisy\n",
+    "# 1168, 1461 - segment other non-salient objects/parts\n",
+    "# 1388 - fails in complex background\n",
+    "# 1398 - small objects\n",
+    "# 1973 - dark scenes\n",
+    "\n",
+    "# DUTS-TE\n",
+    "# \t46, 698, 1712 - segment other non-salient objects/parts\n",
+    "# \t260 - small objects \n",
+    "# 776, 1255 - over segmentation\n",
+    "# \t683, 830, 1465 - noisy\n",
+    "# \t719, 1470 - reflection of water\n",
+    "\n",
     "# 52, 132, 147, 353, 658, 780,  - oversegment, reflection of shiny surface and water\n",
     "# 1388, 1398, 1972, 1168, 1461, 440 - fails in complex background, small objects, dark scenes, segment non-salient objects, noisy\n",
     "# 260, 719, 1470, 683, 830, 1465 - small objects, reflection of water, noisy predictions\n",
