--- a/notebooks/visualize.ipynb
+++ b/notebooks/visualize.ipynb
@@ -375,7 +375,33 @@
     "# 1388, 1398, 1972, 1168, 1461, 440 - fails in complex background, small objects, dark scenes, segment non-salient objects, noisy\n",
     "# 260, 719, 1470, 683, 830, 1465 - small objects, reflection of water, noisy predictions\n",
     "\n",
-    "idxs = [52, 59, 147, 353, 658, 780, 1388, 1398, 1973, 1168, 1461, 440, 260, 719, 1470, 683, 830, 1465]"
+    "# idxs = [52, 59, 147, 353, 658, 780, 1388, 1398, 1973, 1168, 1461, 440, 260, 719, 1470, 683, 830, 1465]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ECSSD -\n",
+    "# , 132, - over segmentation, fine details\n",
+    "# ,,  - reflection of shiny surface and water\n",
+    "# 432, 825, 835, 988 - noisy \n",
+    "# 59 (bee) - complex background\n",
+    "\n",
+    "# DUT-OMRON\n",
+    "# \t1, 14 - over segmentation\n",
+    "# \t119, 365, 439,, 1238 - noisy\n",
+    "#,  - segment other non-salient objects/parts\n",
+    "# - fails in complex background\n",
+    "# - small objects\n",
+    "# - dark scenes\n",
+    "\n",
+    "# DUTS-TE\n",
+    "# \t46, 698, 1712 - segment other non-salient objects/parts\n",
+    "#  - small objects \n",
+    "# 776, 1255 - over segmentation\n",
+    "# ,, - noisy\n",
+    "# , - reflection of water\n",
+    "\n",
+    "idxs = [132,432,825,835,988,59,1,14,119,365,439,1238,46,698,1712,776,1255,4000]"
    ]
   },
   {
@@ -479,7 +505,7 @@
     "        if r==0:\n",
     "            axarr[r, c].set_title(captions[c], fontsize=25)\n",
     "\n",
-    "plt.savefig(\"../logs/compare_predictions.pdf\", facecolor=\"white\", bbox_inches = 'tight', dpi=300)"
+    "plt.savefig(\"../logs/compare_predictions_ext.pdf\", facecolor=\"white\", bbox_inches = 'tight', dpi=300)"
    ]
   },
   {
@@ -487,7 +513,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "stacks  = np.hstack([a,b,c_])\n",
+    "stacks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(stacks)\n",
+    "plt.axis(\"off\")\n",
+    "plt.savefig(\"../logs/failures.pdf\", facecolor=\"white\", bbox_inches = 'tight', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.shape, b.shape, c.shape"
+   ]
   },
   {
    "cell_type": "code",
